--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.shutil-get-terminal-size==1.0.0
 decorator==4.0.11
 Django==1.11.1
 enum34==1.1.6
+gunicorn==19.7.1
 ipython==5.3.0
 ipython-genutils==0.2.0
 packaging==16.8
