--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.3
 backports.shutil-get-terminal-size==1.0.0
 decorator==4.0.11
+dj-database-url==0.4.2
 Django==1.11.1
 enum34==1.1.6
 gunicorn==19.7.1
